# tree-sitter

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  playground.sh  prebuild.sh  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-ziust.pc.in
bindings/c/tree_sitter/: tree-sitter-ziust.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ziust/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterZiustTests/: TreeSitterZiustTests.swift
src/: grammar.json  node-types.json  parser.c
